# claude-code-monitor

./: .gitignore  CONTRIBUTING.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: configuration.md
examples/: config.json  settings.hooks.json
scripts/: install.sh
src/cc_monitor/: __init__.py  cli.py  config.py  focus.py
tests/: test_basic.py
